fix: attempt to fix text-alignment on phones

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -135,6 +135,10 @@ p {
   text-align: justify;
   line-height: 1.5;
 }
+@media screen and (max-width: 48p {
+    text-align: left;
+  }
+}
 strong {
   color: #aaa;
   font-weight: 500;
